# swagger-stitcher

./: .gitignore  Cargo.toml  README.md
src/: main.rs  stitcher.rs
