[package]
name = "hello-rust"
version = "0.1.0"
authors = ["dino16m <anselem16m@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"
[dependencies]
clap = { version = "3.1.3", features = ["derive"] }